--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,12 +103,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="58dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="169dp"
         android:gravity="center"
         android:text="@string/foodTextView3"
         app:layout_constraintBottom_toTopOf="@+id/foodRating3"
-        app:layout_constraintEnd_toStartOf="@+id/foodTextView4"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/friednoodle" />
 
@@ -116,13 +113,13 @@
         android:id="@+id/foodTextView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="163dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="75dp"
         android:gravity="center"
         android:text="@string/foodTextView4"
         app:layout_constraintBottom_toTopOf="@+id/foodRating4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/foodTextView3"
         app:layout_constraintTop_toBottomOf="@+id/satay" />
 
